--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -31,6 +31,7 @@
             line-height: 2.4rem;
             font-weight: 400;
             margin-left: 30vw;
+            white-space: nowrap;
          }
          &-colored {
             color: var(--primary);
@@ -750,9 +751,6 @@
 
    &__text {
    }
-}
-
-.container {
 }
 
 .footer {
