feat: modified font-styles

--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -27,7 +27,7 @@
             font-family: 'Caveat', cursive;
             font-style: italic;
             text-transform: none;
-            font-size: 3.75rem;
+            font-size: 5.2rem;
             line-height: 2.4rem;
             font-weight: 400;
             margin-left: 30vw;
@@ -110,7 +110,9 @@
    }
 
    &__description {
-      font-size: 2.4rem;
+      font-size: 3.4rem;
+      line-height: 3.4rem;
+      font-weight: 600;
       margin-top: 2.4rem;
       font-family: 'Caveat', cursive;
       color: var(--primary);
@@ -419,10 +421,10 @@
 
       &-marker {
          font-weight: 400;
-         font-size: 2rem;
+         font-size: 2.6rem;
          margin: 0;
          font-family: 'Caveat', cursive;
-         font-style: italic;
+         font-style: normal;
          text-transform: none;
          justify-self: flex-start;
       }
@@ -712,6 +714,7 @@
          display: flex;
          flex-direction: row-reverse;
          align-items: center;
+         justify-content: space-between;
       }
 
       &-element {
@@ -746,10 +749,16 @@
       }
    }
 
-   &__title {
-   }
-
+   &__title,
    &__text {
+      max-width: 80%;
+      &::first-letter {
+         text-transform: capitalize;
+      }
+   }
+   &__text {
+      max-width: 87%;
+      font-size: 1.375rem;
    }
 }
 
