--- a/esoteric/vite-sass/src/scss/_fonts.scss
+++ b/esoteric/vite-sass/src/scss/_fonts.scss
@@ -14,14 +14,14 @@
 
 @font-face {
    font-family: 'Schoolbell';
-   src: url('../assets/fonts/Schoolbell-Regular.ttf') format('ttf');
+   src: url('../assets/fonts/Schoolbell-Regular.ttf') format('truetype');
    font-weight: 400;
    font-display: swap;
 }
 
 @font-face {
    font-family: 'Caveat';
-   src: url('../assets/fonts/Caveat-VariableFont_wght.ttf') format('ttf');
+   src: url('../assets/fonts/Caveat-VariableFont_wght.ttf') format('truetype');
    font-weight: 400;
    font-display: swap;
 }
