feat: modified html content && styles

--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -86,6 +86,9 @@
    height: 200vw;
    min-height: 200vw;
    background-image: url('@images/background/ai-generated-8965879_1280.webp');
+   background-image: url('../../assets/images/photo/IMG_8676.jpg');
+   background-image: url('../../assets/images/photo/IMG_8677.jpg');
+   background-image: url('../../assets/images/photo/IMG_8700.jpg');
 
    &__main,
    &__cta,
@@ -94,6 +97,8 @@
       display: flex;
       flex-direction: column;
       gap: 1.4rem;
+      max-width: 87.5vw;
+      margin: 0 auto;
    }
 
    &__info {
@@ -110,10 +115,9 @@
    }
 
    &__description {
-      font-size: 3.4rem;
-      line-height: 3.4rem;
+      font-size: 3.2rem;
+      line-height: 3.2rem;
       font-weight: 600;
-      margin-top: 2.4rem;
       font-family: 'Caveat', cursive;
       color: var(--primary);
    }
@@ -124,7 +128,7 @@
 
    &__main {
       gap: 1.6rem;
-      margin-bottom: 4rem;
+      margin-bottom: 3rem;
    }
 
    &__title {
@@ -140,7 +144,7 @@
    &__button {
       padding: 1.1rem 4rem;
       border-radius: 1.125rem;
-      margin: 0 2rem;
+      margin: 0 2rem 0.5rem;
       color: var(--on-primary);
       background-color: var(--primary);
    }
@@ -430,7 +434,6 @@
       }
 
       &-text {
-         font-weight: 600;
          justify-self: center;
          margin: auto 0;
          &::first-letter {
@@ -446,8 +449,10 @@
    }
 
    .roadmap {
+      margin-bottom: 0;
+
       &__list {
-         margin: 10rem 10vw 3rem;
+         margin: 10rem 10vw 0;
          display: flex;
          flex-flow: column wrap;
          gap: 0;
@@ -456,7 +461,7 @@
       &__item {
          height: auto;
          min-height: 14rem;
-         padding: 3rem;
+         padding: 3rem 0.5rem;
          display: flex;
          text-align: left;
          align-items: center;
@@ -465,6 +470,7 @@
          position: relative;
 
          &::after,
+         &:first-child p::before,
          &::before {
             display: block;
             position: absolute;
@@ -474,31 +480,37 @@
             background: var(--primary);
             border-radius: 50%;
             left: 47.5%;
-            top: -1rem;
+            top: -1.1rem;
          }
 
+         &:first-child p::before,
          &::after {
-            top: 0rem;
-            left: -5%;
+            top: -2px;
+            right: -15%;
             background: transparent;
-            width: 55%;
+            width: 70%;
             height: calc(100% + 2px);
             border: 2px dashed var(--primary);
-            border-radius: 50% 0 0 50%;
-            border-right: 2px solid transparent;
+            border-radius: 0 50% 50% 0;
+            border-left: 2px solid transparent;
          }
 
+         &:first-child p::before,
          &:nth-child(2n)::after {
             transform: rotate(180deg);
-            left: unset;
-            right: -5%;
+            left: -15%;
          }
 
+         &:first-child p::before,
          &:last-child::after {
             border-top: 2px solid transparent;
-            border-left: 2px solid transparent;
-            border-bottom-left-radius: 150%;
-            height: 50px;
+            border-right: 2px solid transparent;
+            border-bottom-right-radius: 150%;
+         }
+
+         &:first-child p::before {
+            transform: scale(-1, 1);
+            top: calc(-100% - 1px);
          }
       }
    }
@@ -544,18 +556,14 @@
          }
       }
 
-      .description__content-text {
-         font-weight: 400;
-      }
-
       &-gift {
          position: absolute;
          right: -1rem;
          bottom: -2rem;
          content: url('@images/pictures/blue-gift-3.png');
-         width: 12rem;
-         height: 12rem;
-         transform: rotate(4deg);
+         width: 8rem;
+         height: 8rem;
+         transform: rotate(10deg);
 
          img {
             width: 100%;
