--- a/esoteric/vite-sass/src/scss/_global.scss
+++ b/esoteric/vite-sass/src/scss/_global.scss
@@ -18,6 +18,10 @@ html {
    color-scheme: dark;
 }
 
+.red {
+   color: red !important;
+}
+
 body {
    font-family: 'Montserrat', sans-serif;
    background: var(--surface-container-lowest);
