--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -664,6 +664,27 @@
             background-color: var(--surface-container-high);
          }
       }
+
+      li {
+         height: auto;
+
+         div {
+            min-height: 200px;
+            height: auto;
+            border-color: var(--tertiary-container);
+         }
+
+         div img {
+            position: static;
+            width: 100%;
+            height: 100%;
+            border-radius: 2rem;
+         }
+
+         &:nth-child(2n) > div {
+            border-color: var(--secondary-container);
+         }
+      }
    }
 }
 
