--- a/esoteric/vite-sass/src/scss/_mixins.scss
+++ b/esoteric/vite-sass/src/scss/_mixins.scss
@@ -13,6 +13,11 @@
       @content;
    }
 }
+@mixin viewport-xxl {
+   @media (min-width: 1280px) {
+      @content;
+   }
+}
 
 @mixin text-gradient {
    background: var(--hero-name-background);
