--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -43,6 +43,19 @@
          }
       }
 
+      @include mixins.viewport-xl {
+         margin-left: auto;
+         margin-right: auto;
+         max-width: 80%;
+
+         &_title {
+            &-cursive,
+            &-colored {
+               font-size: 6rem;
+            }
+         }
+      }
+
       &_description {
       }
    }
@@ -84,10 +97,8 @@
 .header {
    height: 200vw;
    min-height: 200vw;
-   background-image: url('@images/background/ai-generated-8965879_1280.webp');
-   background-image: url('@images/photo/IMG_8676.jpg');
-   background-image: url('@images/photo/IMG_8677.jpg');
    background-image: url('@images/photo/IMG_8700.jpg');
+   background-position: center 10%;
 
    &__main,
    &__cta,
@@ -159,6 +170,23 @@
       font-size: 2.25rem;
       &-left {
          font-size: 1.75rem;
+      }
+   }
+
+   @include mixins.viewport-xl {
+      height: 55vw;
+      min-height: 55vw;
+
+      &__title {
+         font-size: 1.65rem;
+      }
+
+      &__button,
+      &__subtitle {
+         font-size: 1.25rem;
+      }
+      &__cta {
+         // display: none;
       }
    }
 
@@ -326,9 +354,20 @@
 
          img {
             width: 100%;
-            height: 100%;
+            height: auto;
             object-fit: cover;
+            object-position: center bottom;
+            box-shadow: 0rem 0rem 0 20rem rgba(var(--shadow-black), 0.7);
          }
+      }
+      &:nth-child(2) img {
+         object-position: center 34%;
+      }
+      &:nth-child(3) img {
+         object-position: center 14%;
+      }
+      &:nth-child(4) img {
+         object-position: center 34%;
       }
 
       &-text {
@@ -341,17 +380,22 @@
    @include mixins.viewport-lg {
       &__list {
          flex-flow: row wrap;
+         justify-content: center;
+         align-items: center;
+         gap: 5rem;
+         max-width: 87vw;
+         margin-bottom: 6rem;
       }
 
       &__item {
-         width: 27.5vw;
+         width: 45%;
 
          &-image {
-            height: 18vw;
+            height: 22vw;
          }
 
-         &:nth-child(2) {
-            margin-top: 10rem;
+         &:nth-child(2n) {
+            margin-bottom: -12rem;
          }
       }
    }
@@ -514,6 +558,9 @@
          font-style: normal;
          text-transform: none;
          justify-self: flex-start;
+         @include mixins.viewport-xl {
+            font-size: 2.25rem;
+         }
       }
 
       &-text {
@@ -623,6 +670,24 @@
          }
       }
    }
+
+   @include mixins.viewport-xl {
+      &__content {
+         ul {
+            max-width: 60%;
+         }
+         li {
+            width: auto;
+            height: 15rem;
+            padding: 1.8rem 4rem;
+            padding-bottom: 3rem;
+         }
+
+         &-text {
+            font-size: 1.25rem;
+         }
+      }
+   }
 }
 
 .testimonials,
@@ -673,6 +738,9 @@
          margin: 0;
          margin-left: auto;
          font-style: normal;
+         @include mixins.viewport-xl {
+            font-size: 1.6rem;
+         }
       }
 
       &-text {
@@ -843,10 +911,15 @@
          ul {
             justify-content: space-between;
             gap: 5rem;
+            margin-bottom: 5rem;
          }
 
          li {
             width: 45%;
+            &:last-of-type {
+               margin-top: 5rem;
+               margin-bottom: -5rem;
+            }
          }
 
          li:nth-child(1) {
@@ -957,6 +1030,23 @@
       max-width: 87%;
       font-size: 1.375rem;
    }
+
+   @include mixins.viewport-xl {
+      &__item {
+         padding: 1.2rem 2.6rem;
+         border-radius: 2.25rem;
+      }
+
+      &__expand {
+         width: 3.5rem;
+         height: 3.5rem;
+      }
+
+      &__text {
+         font-size: 1.175rem;
+         padding-bottom: 2rem;
+      }
+   }
 }
 
 .footer {
@@ -977,6 +1067,17 @@
       }
       &__copyright {
          grid-area: f-bottom;
+      }
+   }
+
+   @include mixins.viewport-xl {
+      &__label {
+         font-size: 1.25rem;
+      }
+
+      font-size: 1.1rem;
+      a {
+         font-size: 1.1rem;
       }
    }
 
