--- a/esoteric/vite-sass/src/scss/_main.scss
+++ b/esoteric/vite-sass/src/scss/_main.scss
@@ -7,7 +7,6 @@
    position: relative;
    overflow: hidden;
 
-
    // background-color: var(--surface);
 
    // overflow-y: scroll;
@@ -39,8 +38,8 @@
    position: absolute;
    right: 5%;
    font-size: 1.2rem;
-   padding: 1rem;
    font-weight: 600;
+   padding: 1rem;
    color: var(--primary);
    background-color: var(--on-primary);
    width: auto;
@@ -50,6 +49,10 @@
    box-shadow: 3px 4px 10px -4px var(--inverse-surface);
    &:hover {
       opacity: 1;
+   }
+   @include mixins.viewport-xl {
+      font-size: 1rem;
+      padding: 0.5rem 1rem;
    }
 }
 
@@ -69,6 +72,9 @@
    &:not(:active) {
       font-size: 1.8rem;
       padding-left: 0.2rem;
+      @include mixins.viewport-xl {
+         font-size: 1.4rem;
+      }
    }
 
    &::before {
@@ -99,6 +105,10 @@
       &::before {
          content: 'Switch Theme @';
       }
+      @include mixins.viewport-xl {
+         padding: 0.5rem;
+         font-size: 1rem;
+      }
    }
 }
 
@@ -107,6 +117,7 @@
    bottom: 5%;
    min-width: 70px;
    width: fit-content;
+   border-radius: 0.75rem;
    &:hover {
       border-radius: 2rem;
    }
