feat: modified xl-styles

--- a/esoteric/vite-sass/src/scss/_global.scss
+++ b/esoteric/vite-sass/src/scss/_global.scss
@@ -9,6 +9,9 @@ html {
    @include mixins.viewport-xl {
       font-size: 12px;
    }
+   @include mixins.viewport-xxl {
+      font-size: 14px;
+   }
 }
 
 .dark {
@@ -81,4 +84,9 @@ h6,
    a {
       text-decoration: none;
    }
+}
+
+button,
+a {
+   cursor: pointer;
 }
