--- a/esoteric/vite-sass/src/pages/homepage/homepage.scss
+++ b/esoteric/vite-sass/src/pages/homepage/homepage.scss
@@ -173,9 +173,48 @@
       }
    }
 
+   @include mixins.viewport-xxl {
+      height: 56.25vw;
+      min-height: 56.25vw;
+      justify-content: space-between;
+      align-items: stretch;
+
+      &__content {
+         margin-left: 5vw;
+         margin-top: auto;
+         margin-bottom: 10vw;
+      }
+
+      &__info {
+         justify-self: flex-end;
+         margin-left: auto;
+         margin-right: 5vw;
+         text-align: right;
+      }
+      &__title {
+         max-width: 48%;
+      }
+      &__subtitle {
+         max-width: 65%;
+         font-size: 1.8rem;
+      }
+
+      &__description {
+         font-size: 3rem;
+         line-height: 3.2rem;
+         max-width: 60%;
+      }
+      &__main {
+         gap: 2rem;
+      }
+      &__button {
+         margin: 0.5rem 0;
+      }
+   }
+
    @include mixins.viewport-xl {
-      height: 55vw;
-      min-height: 55vw;
+      height: 65vw;
+      min-height: 65vw;
 
       &__title {
          font-size: 1.65rem;
@@ -184,9 +223,6 @@
       &__button,
       &__subtitle {
          font-size: 1.25rem;
-      }
-      &__cta {
-         // display: none;
       }
    }
 
@@ -399,6 +435,26 @@
          }
       }
    }
+
+   @include mixins.viewport-xl {
+      &__list {
+         max-width: 87vw;
+         gap: 5rem;
+      }
+
+      &__item {
+         width: 32.5%;
+         margin: 0 5%;
+
+         &-image {
+            height: 15vw;
+         }
+
+         &:nth-child(2n) {
+            margin: 0 5%;
+         }
+      }
+   }
 }
 
 .about {
@@ -412,12 +468,6 @@
       gap: 3rem;
       text-align: left;
       width: 90vw;
-
-      @include mixins.viewport-lg {
-         flex-direction: row;
-         align-items: center;
-         justify-content: space-between;
-      }
 
       &__text {
          margin: 0.75rem 0;
@@ -447,6 +497,11 @@
                height: 22rem;
                transform: rotate(8deg);
                margin: auto;
+            }
+            @include mixins.viewport-xl {
+               width: 30rem;
+               height: 32rem;
+               margin: 5vw auto;
             }
          }
 
@@ -507,6 +562,29 @@
          &:last-of-type {
             display: flex;
             flex-direction: column;
+         }
+      }
+   }
+
+   @include mixins.viewport-xxl {
+      padding-bottom: 5rem;
+
+      &__article {
+         flex-direction: row;
+         align-items: center;
+         justify-content: space-between;
+
+         &:first-of-type &__content {
+            padding-left: 3vw;
+         }
+         &:last-of-type &__content {
+            padding-right: 3vw;
+         }
+         &__content {
+            p,
+            li {
+               margin-top: 1rem;
+            }
          }
       }
    }
@@ -851,6 +929,35 @@
          }
       }
    }
+   @include mixins.viewport-xl {
+      &__content {
+         ul {
+            gap: 2rem;
+         }
+         li {
+            gap: 1rem;
+            width: 48%;
+            padding: 4rem 2.6rem 3.2rem;
+
+            & > div {
+               height: 14rem;
+               width: 24rem;
+               margin-top: 1.6rem;
+            }
+         }
+      }
+      &__conclusion-list {
+         margin-top: 5rem;
+         gap: 1rem;
+      }
+
+      &__conclusion-item {
+         padding: 1rem 4rem;
+         &::before {
+            top: 0rem;
+         }
+      }
+   }
 }
 
 .testimonials {
@@ -924,6 +1031,23 @@
 
          li:nth-child(1) {
             margin: 0 27.5%;
+         }
+      }
+
+      @include mixins.viewport-xl {
+         ul {
+            justify-content: center;
+            gap: 10%;
+            padding: 3vw 0 10vw;
+         }
+         li {
+            width: 25%;
+            &:nth-child(1) {
+               margin: 0 30%;
+            }
+         }
+         &-text {
+            margin: 0 auto;
          }
       }
    }
