--- a/esoteric/vite-sass/src/scss/_global.scss
+++ b/esoteric/vite-sass/src/scss/_global.scss
@@ -46,6 +46,9 @@ body {
    @include mixins.viewport-xl {
       font-size: 1.25rem;
    }
+   @include mixins.viewport-xxl {
+      font-size: 1.625rem;
+   }
 }
 
 .inclined {
