feat: modified styles reg-form

--- a/esoteric/vite-sass/src/pages/register-form/register-form.scss
+++ b/esoteric/vite-sass/src/pages/register-form/register-form.scss
@@ -120,6 +120,11 @@
    &.hidden {
       visibility: hidden;
       z-index: -99;
+      .form__button-submit {
+         pointer-events: none;
+         background: var(--surface-container-highest);
+         color: var(--outline);
+      }
    }
 
    @include mixins.viewport-md {
