--- a/esoteric/vite-sass/src/scss/_global.scss
+++ b/esoteric/vite-sass/src/scss/_global.scss
@@ -24,8 +24,7 @@ html {
 
 body {
    font-family: 'Montserrat', sans-serif;
-   background: var(--surface-container-lowest);
-   color: var(--tertiary);
+   // background: var(--surface);
    transition: background 0.2s ease, color 0.2s ease;
 }
 
